--- a/tsconfig.example.json
+++ b/tsconfig.example.json
@@ -27,13 +27,10 @@
     "types": [
       "vite/client",
     ],
+    "outDir": "istoria-dist"
   },
-  "exclude": [
-    "lib/controls",
-    "lib/renderer"
-  ],
   "include": [
     "example",
-    "lib"
+    "lib",
   ],
 }
